kubernetes/apps/changedetection/service.yml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: changedetection
spec:
  ports: [{port: 5000, targetPort: 5000}]
  selector: {app: changedetection}
